2005-07-22  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreemodelsort.xml
	* pygtk-gtktreemodelfilter
	* pygtk-gtkliststore.xml
	* pygtk-gtktreestore.xml
	* pygtk-gtktreemodel.xml (Description): Add reference to tutorial and
	TreeModel description of Python protocol support.

2005-07-21  John Finlay  <finlay@moeraki.com>

	* pygtk-pangocolor.xml (pango.Color): remove parse() method and replace
	with pango.Colo()r constructor.

2005-07-19  John Finlay  <finlay@moeraki.com>

	* pygtk-gdkwindow.xml (various): Reference GDK constants directly
	via links. Fixes #310871 (Nikos Kouremenos)
	Fix freedesktop links.

2005-07-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkmenu.xml (detach): Fix typo. #310745 (Nikos Kouremenos)

2005-07-10  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml (set_activate_signal)
	(set_scroll_adjustments_signal): Add these new PyGTK 2.8 methods.
	Fixes #155679.

2005-07-07  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwidget.xml (render_icon): detail param defaults to None.
	Fixes #309724 (Nikos Kouremenos)

	* pygtk-gtktreestore.xml: Fix typos. Fixes #309719 (Nikos Kouremenos)

2005-07-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gobject.xml (Signals): Add description of the "notify" signal.

2005-06-20  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkradioaction.xml (set_group, get_group): 
	* pygtk-gtkradiobutton.xml (set_group, get_group): 
	* pygtk-gtkradiomenuitem.xml (set_group, get_group): 
	* pygtk-gtkradiotoolbutton.xml (set_group, get_group): 
	set group can specify None to remove item from group. #170514

2005-05-29  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkdialog.xml (add_buttons): correct description of buttons
	param. (Sridhar Ratna)

2005-05-26  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkwindow.xml (set_keep_abaove, set_keep_below, move): 
	Latest attempt to track freedesktop wm standard link. (Olav Vitters)

2005-05-22  John Finlay  <finlay@moeraki.com>
