@@ -1,5 +1,8 @@
 2005-07-22  John Finlay  <finlay@moeraki.com>
 
+	* pygtk-gtknotebook.xml (switch-page): Add missing param descriptions.
+	Fixes #311283 (Nikos Kouremenos)
+
 	* pygtk-gtktreemodelsort.xml
 	* pygtk-gtktreemodelfilter
 	* pygtk-gtkliststore.xml
